--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -19,6 +19,7 @@
         <p class="card-text">
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
+        <a href ='#'>Add a new tiny link</a>
       </div>
       <div class="card-footer text-muted"></div>
     </div>
