updated each html page to redirect to the new submission

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -21,7 +21,7 @@
         <p class="card-text">
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
-        <a href ='#'>Add a new tiny link</a>
+        <a href ='http://localhost:8080/urls/new'>Add a new tiny link</a>
       </div>
       <div class="card-footer text-muted"></div>
     </div>
