--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -38,7 +38,7 @@
           <% } %>
         </tbody>
       </table>
-      <a href ='#'>Add a new tiny link</a>
+      <a href ='http://localhost:8080/urls/new'>Add a new tiny link</a>
     </main>
     <!-- Bootstrap JS -->
     <script
