--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -34,6 +34,8 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <td><form method="POST" action="/urls/<%= id %>/delete">
+                  <button type="submit" class="btn btn-outline-danger">Delete</button></form></td>
             </tr>
           <% } %>
         </tbody>
