added links to edit long urls, updated logic to edit long url

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -27,6 +27,8 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
@@ -34,13 +36,16 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
-              <td><form method="POST" action="/urls/<%= id %>/delete">
-                  <button type="submit" class="btn btn-outline-danger">Delete</button></form></td>
+                <td><form method="GET" action="/urls/<%= id %>">
+                  <button type="submit" class="btn btn-outline-primary">Edit</button></form></td>
+                  <td><form method="POST" action="/urls/<%= id %>/delete">
+                    <button type="submit" class="btn btn-outline-danger">Delete</button></form></td>
+              </tr>
             </tr>
           <% } %>
         </tbody>
       </table>
-      <a href ='http://localhost:8080/urls/new'>Add a new tiny link</a>
+      <a href ='/urls/new'>Add a new tiny link</a>
     </main>
     <!-- Bootstrap JS -->
     <script
