--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -22,6 +22,19 @@
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
         <a href ='http://localhost:8080/urls/new'>Add a new tiny link</a>
+        <form class="form-inline" action="/urls/<%= id %>" method="POST">
+          <div class="form-group mb-2">
+            <label for="longURL">Update your long URL:</label>
+            <input
+              class="form-control"
+              type="text"
+              name="longURL"
+              placeholder="http://"
+              style="width: 300px; margin: 1em"
+            />
+            <button type="submit" class="btn btn-primary">Update!</button>
+          </div>
+        </form>
       </div>
       <div class="card-footer text-muted"></div>
     </div>
