--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -22,6 +22,9 @@
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
         <a href ='http://localhost:8080/urls/new'>Add a new tiny link</a>
+      </div>
+      <div class="card-footer text-muted">
+        <h3 class="card-title">Edit</h3>
         <form class="form-inline" action="/urls/<%= id %>" method="POST">
           <div class="form-group mb-2">
             <label for="longURL">Update your long URL:</label>
@@ -36,7 +39,6 @@
           </div>
         </form>
       </div>
-      <div class="card-footer text-muted"></div>
     </div>
     <!-- Bootstrap JS -->
     <script
