--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,5 +18,15 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <form class="form-inline" method="POST" action="/login">
+      <input
+        class="form-control"
+        type="text"
+        placeholder="Username"
+        name="username"
+        style="margin-right: 20px"
+      />
+      <button type="submit" class="btn btn-info">Sign in</button>
+    </form>
   </nav>
 </header>
