--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -26,7 +26,7 @@
         name="username"
         style="margin-right: 20px"
       />
-      <button type="submit" class="btn btn-info">Sign in</button>
+      <button type="submit" class="btn btn-info">Sign In</button>
     </form>
   </nav>
 </header>
