--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,9 +16,15 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <a class="nav-item nav-link" ><%= username %></a>
       </div>
     </div>
+  <% if (username) { %>
+    <form class="form-inline" method="POST" action="/logout">
+        <div style="margin-right: 20px">Logged in as <%=username%></div>
+      </div>
+      <button type="submit" class="btn btn-info">Logout</button>
+    </form>
+    <% } else { %>
     <form class="form-inline" method="POST" action="/login">
       <input
         class="form-control"
@@ -28,6 +34,6 @@
         style="margin-right: 20px"
       />
       <button type="submit" class="btn btn-info">Sign In</button>
-    </form>
+    </form> <% } %>
   </nav>
 </header>
