--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -25,6 +25,7 @@
       </div>
       <div class="card-footer text-muted">
         <h3 class="card-title">Edit</h3>
+        <div class="row justify-content-center"></div>
         <form class="form-inline" action="/urls/<%= id %>" method="POST">
           <div class="form-group mb-2">
             <label for="longURL">Update your long URL:</label>
@@ -33,7 +34,7 @@
               type="text"
               name="longURL"
               placeholder="http://"
-              style="width: 300px; margin: 1em"
+              style="width: 300px; margin: 2em"
             />
             <button type="submit" class="btn btn-primary">Update!</button>
           </div>
