--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -25,7 +25,7 @@
       </div>
       <div class="card-footer text-muted">
         <h3 class="card-title">Edit</h3>
-        <div class="row justify-content-center"></div>
+        <div class="row justify-content-center">
         <form class="form-inline" action="/urls/<%= id %>" method="POST">
           <div class="form-group mb-2">
             <label for="longURL">Update your long URL:</label>
@@ -39,6 +39,7 @@
             <button type="submit" class="btn btn-primary">Update!</button>
           </div>
         </form>
+      </div>
       </div>
     </div>
     <!-- Bootstrap JS -->
