added register endpoints and updated header to include registered email

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,9 +18,9 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-  <% if (username) { %>
+  <% if (user) { %>
     <form class="form-inline" method="POST" action="/logout">
-        <div style="margin-right: 20px">Logged in as <%=username%></div>
+        <div style="margin-right: 20px">Logged in as <%=user['email']%></div>
       </div>
       <button type="submit" class="btn btn-info">Logout</button>
     </form>
