--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -21,15 +21,14 @@
   <body>
     <%- include('partials/_header') %>
     <div class="row justify-content-center">
-    <form>
-      <div class="form-group" action="/urls/register" method="POST">
+    <form action="/register" method="POST">
+      <div class="form-group"
         <label for="exampleInputEmail1">Email address</label>
         <input 
         type="email"
         name="email"
         class="form-control" 
-        id="exampleInputEmail1"
-        placeholder="Enter email">
+        placeholder="Enter email" />
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Password</label>
@@ -37,13 +36,11 @@
         type="password"
         name="password"
         class="form-control" 
-        id="exampleInputPassword1" 
         placeholder="Password">
-      </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
-
+</div>
     <!-- Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
