--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -21,6 +21,8 @@
   <body>
     <%- include('partials/_header') %>
     <div class="row justify-content-center">
+    <main style="margin: 1em;">
+    <h3>Sign In</h3>
     <form action="/login" method="POST">
       <div class="form-group"
         <label for="exampleInputEmail1">Email address</label>
@@ -37,10 +39,13 @@
         name="password"
         class="form-control" 
         placeholder="Password">
+        <div style="margin-top: 20px">
       <button type="submit" class="btn btn-primary">Login!</button>
+    </div>
     </form>
   </div>
 </div>
+</main>
     <!-- Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
