--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -21,6 +21,8 @@
   <body>
     <%- include('partials/_header') %>
     <div class="row justify-content-center">
+      <main style="margin: 1em;">
+      <h3>Create Account</h3>
     <form action="/register" method="POST">
       <div class="form-group"
         <label for="exampleInputEmail1">Email address</label>
@@ -37,10 +39,13 @@
         name="password"
         class="form-control" 
         placeholder="Password">
+        <div style="margin-top: 20px">
       <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
     </form>
   </div>
 </div>
+</main>
     <!-- Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
