--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -23,7 +23,7 @@
     <div class="row justify-content-center">
     <main style="margin: 1em;">
     <h3>Sign In</h3>
-    <form action="/login" method="POST">
+    <form action="/urls/login" method="POST">
       <div class="form-group"
         <label for="exampleInputEmail1">Email address</label>
         <input 
